--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 Vitals Tracker — MASTER (Index Authority)
 Copyright (c) 2026 Wendell K. Jiles. All rights reserved.
 
-App Version: v2.023c
-Base: v2.021 (last known-good per user; reconstruction of index shell)
+App Version: v2.023e
+Base: v2.021
 Date: 2026-01-18
 
-v2.023c — Change Log (THIS FILE ONLY)
-1) Adds js/version.js to script chain (missing previously).
-2) Loads js/version.js FIRST to eliminate v?.??? drift.
-3) Moves js/app.js immediately after js/version.js.
-4) Removes hard-coded APP_VERSION assignments in inline script (version is owned by js/version.js + js/app.js).
-5) Updates ALL cache-busters to ?v=2.023c including sw.js.
+v2.023e — Change Log (THIS FILE ONLY)
+1) REMOVED the inline router/swipe/button wiring that was fighting the JS modules.
+2) Settings is NOT in rotation (rotation is owned by js/panels.js + js/gestures.js).
+3) Chart interactions are owned by js/chart.js; panel swipe is blocked inside #canvasWrap by js/gestures.js.
+4) index.html now provides structure + IDs only. Behavior lives in JS modules.
 
 Release Schema (v2.023 series; one-file-at-a-time)
-1) index.html  (this file)
+1) index.html
 2) js/version.js
 3) js/app.js
 4) js/storage.js
@@ -28,16 +27,20 @@ Release Schema (v2.023 series; one-file-at-a-time)
 
 Hard Rules (anti-drift)
 - Canonical version is owned by js/version.js only.
-- index.html may DISPLAY version but MUST NOT define canonical values long-term.
+- index.html may DISPLAY version but MUST NOT define canonical values.
 - Chart logic lives ONLY in js/chart.js.
-- Swipe logic lives ONLY in js/gestures.js (except minimal gating in this file until gestures.js owns it fully).
+- Swipe logic lives ONLY in js/gestures.js.
+- Panels/rotation lives ONLY in js/panels.js.
 - Do not rename IDs listed below without changing dependent modules.
 
 Key IDs (contract)
-- Panels: #panelHome, #panelCharts, #panelLog, #panelSettings
+- Panels: #panelHome, #panelAdd (optional), #panelCharts, #panelLog, #panelSettings
+- Root: #panelsRoot
 - Chart: #canvasWrap, #chartCanvas, #chartsSwipeTop, #chartsSwipeBottom, #chartsTopNote
 - Home buttons: #btnGoAdd, #btnGoCharts, #btnGoLog
-- Settings buttons: #btnSettings, #btnBackFromSettings
+- Settings buttons: #btnSettings, #btnSettingsFromCharts, #btnSettingsFromLog, #btnBackFromSettings
+- Home footer version label: #homeVersion
+- Boot label: #bootText
 -->
 <!doctype html>
 <html lang="en">
@@ -391,10 +394,33 @@ Key IDs (contract)
           </div>
         </section>
 
+        <!-- ADD (optional panel placeholder; shown only when restored) -->
+        <section class="panel" id="panelAdd" aria-label="Add">
+          <div class="panelHeader" id="addHeader" data-swipezone="1">
+            <div class="name">Add Reading</div>
+            <div class="nav">
+              <button class="btn secondary" id="btnHomeFromAdd">Home</button>
+              <button class="btn icon secondary" id="btnSettingsFromAdd" aria-label="Settings" title="Settings">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                  <path d="M12 15.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Z"
+                    stroke="rgba(235,245,255,.78)" stroke-width="2"/>
+                  <path d="M19.4 15a7.9 7.9 0 0 0 .1-1 7.9 7.9 0 0 0-.1-1l2-1.6-2-3.4-2.4 1a8 8 0 0 0-1.7-1l-.4-2.6H11l-.4 2.6a8 8 0 0 0-1.7 1l-2.4-1-2 3.4 2 1.6a7.9 7.9 0 0 0-.1 1c0 .34.03.67.1 1l-2 1.6 2 3.4 2.4-1c.53.4 1.1.74 1.7 1l.4 2.6h4l.4-2.6c.6-.26 1.17-.6 1.7-1l2.4 1 2-3.4-2-1.6Z"
+                    stroke="rgba(235,245,255,.50)" stroke-width="2" stroke-linejoin="round"/>
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div class="card" id="addCard">
+            <div class="muted">
+              Add panel UI + save flow will be restored by the Add modules (not in index.html).
+            </div>
+          </div>
+        </section>
+
         <!-- CHARTS (1) -->
         <section class="panel" id="panelCharts" aria-label="Charts">
           <div class="panelHeader" id="chartsHeader" data-swipezone="1">
-            <div class="name">Charts (Read-Only)</div>
+            <div class="name">Charts</div>
             <div class="nav">
               <button class="btn secondary" id="btnHomeFromCharts">Home</button>
               <button class="btn icon secondary" id="btnSettingsFromCharts" aria-label="Settings" title="Settings">
@@ -446,7 +472,7 @@ Key IDs (contract)
           </div>
         </section>
 
-        <!-- SETTINGS (3) -->
+        <!-- SETTINGS (gear-only; NOT in rotation) -->
         <section class="panel" id="panelSettings" aria-label="Settings">
           <div class="panelHeader" data-swipezone="1">
             <div class="name">Settings</div>
@@ -456,10 +482,12 @@ Key IDs (contract)
           </div>
 
           <div class="card">
-            <div class="muted">v2.023 series: stabilize version authority + chart + swipe + input before new features.</div>
+            <div class="muted">
+              Stabilize: version authority + chart + swipe + input before new features.
+            </div>
             <div class="settingsList">
               <div class="settingsItem">Reporting + Export will be restored after input is restored.</div>
-              <div class="settingsItem">Distress (0–5) and Medication markers are on the roadmap (not in v2.023).</div>
+              <div class="settingsItem">Distress (0–5) + Medication markers are on the roadmap (not in v2.023).</div>
               <div class="settingsItem">Version discipline: js/version.js is canonical; UI displays from it only.</div>
             </div>
           </div>
@@ -469,227 +497,23 @@ Key IDs (contract)
     </div>
   </div>
 
-  <!-- Script cache-busting pinned to v2.023c -->
-  <script src="./js/version.js?v=2.023c"></script>
-  <script src="./js/app.js?v=2.023c"></script>
+  <!-- Script chain (NO inline app wiring here) -->
+  <script src="./js/version.js?v=2.023e"></script>
+  <script src="./js/app.js?v=2.023e"></script>
+  <script src="./js/storage.js?v=2.023e"></script>
+  <script src="./js/store.js?v=2.023e"></script>
+  <script src="./js/state.js?v=2.023e"></script>
+  <script src="./js/chart.js?v=2.023e"></script>
+  <script src="./js/gestures.js?v=2.023e"></script>
+  <script src="./js/panels.js?v=2.023e"></script>
+  <script src="./js/ui.js?v=2.023e"></script>
 
-  <script src="./js/storage.js?v=2.023c"></script>
-  <script src="./js/store.js?v=2.023c"></script>
-  <script src="./js/state.js?v=2.023c"></script>
-  <script src="./js/chart.js?v=2.023c"></script>
-  <script src="./js/gestures.js?v=2.023c"></script>
-  <script src="./js/panels.js?v=2.023c"></script>
-  <script src="./js/ui.js?v=2.023c"></script>
-
+  <!-- Minimal boot-only script -->
   <script>
     (function(){
-
-      // Version text is owned by js/version.js + js/app.js (VTVersion).
-      // Do not set or hard-code version strings here.
-
-      // Panel refs
-      const panels = {
-        home: document.getElementById("panelHome"),
-        charts: document.getElementById("panelCharts"),
-        log: document.getElementById("panelLog"),
-        settings: document.getElementById("panelSettings"),
-      };
-
-      const carousel = ["home","charts","log","settings"];
-      let active = "home";
-      let lastNonSettings = "home";
-
-      function setActive(which){
-        for(const k of Object.keys(panels)){
-          const el = panels[k];
-          if(el) el.classList.toggle("active", k === which);
-        }
-        if(which !== "settings") lastNonSettings = which;
-        active = which;
-
-        // On entering charts, ask chart module to render (if present)
-        if(which === "charts"){
-          try{
-            if(window.VTChart && typeof window.VTChart.onShow === "function"){
-              window.VTChart.onShow();
-            }
-          }catch(_){}
-        }
-      }
-
-      function nextPanel(){
-        const i = carousel.indexOf(active);
-        if(i < 0) return;
-        setActive(carousel[(i+1) % carousel.length]);
-      }
-      function prevPanel(){
-        const i = carousel.indexOf(active);
-        if(i < 0) return;
-        setActive(carousel[(i-1 + carousel.length) % carousel.length]);
-      }
-
-      // Buttons
-      document.getElementById("btnGoAdd").addEventListener("click", () => {
-        alert("Add/Input restoration is part of the next step. (Input is currently disabled in v2.023c.)");
-      });
-      document.getElementById("btnGoCharts").addEventListener("click", () => setActive("charts"));
-      document.getElementById("btnGoLog").addEventListener("click", () => setActive("log"));
-
-      document.getElementById("btnHomeFromCharts").addEventListener("click", () => setActive("home"));
-      document.getElementById("btnHomeFromLog").addEventListener("click", () => setActive("home"));
-
-      const openSettings = () => setActive("settings");
-      document.getElementById("btnSettings").addEventListener("click", openSettings);
-      document.getElementById("btnSettingsFromCharts").addEventListener("click", openSettings);
-      document.getElementById("btnSettingsFromLog").addEventListener("click", openSettings);
-
-      document.getElementById("btnBackFromSettings").addEventListener("click", () => {
-        setActive(lastNonSettings || "home");
-      });
-
-      // Pull-to-refresh (Home only)
-      const pullIndicator = document.getElementById("pullIndicator");
-      let pullStartY = null;
-      let pullArmed = false;
-
-      panels.home.addEventListener("touchstart", (e) => {
-        const homeCard = document.getElementById("homeCard");
-        if(homeCard && homeCard.scrollTop !== 0) return;
-        pullStartY = e.touches[0].clientY;
-        pullArmed = false;
-      }, {passive:true});
-
-      panels.home.addEventListener("touchmove", (e) => {
-        if(pullStartY == null) return;
-        const dy = e.touches[0].clientY - pullStartY;
-        if(dy > 0){
-          const h = Math.min(48, Math.floor(dy/2));
-          pullIndicator.style.height = h + "px";
-          pullArmed = (h >= 36);
-        }
-      }, {passive:true});
-
-      panels.home.addEventListener("touchend", () => {
-        if(pullStartY == null) return;
-        const armed = pullArmed;
-        pullStartY = null;
-        pullArmed = false;
-        pullIndicator.style.height = "0px";
-        if(armed) location.reload();
-      });
-
-      // Install handling
-      const btnInstall = document.getElementById("btnInstall");
-      let deferredPrompt = null;
-      window.addEventListener("beforeinstallprompt", (e) => {
-        e.preventDefault();
-        deferredPrompt = e;
-        btnInstall.disabled = false;
-      });
-      btnInstall.addEventListener("click", async () => {
-        try{
-          if(!deferredPrompt) return;
-          deferredPrompt.prompt();
-          await deferredPrompt.userChoice;
-        } finally {
-          deferredPrompt = null;
-          btnInstall.disabled = true;
-        }
-      });
-
-      // Clear data (best-effort)
-      document.getElementById("btnClearData").addEventListener("click", () => {
-        const ok = confirm("Clear all local data on this device?");
-        if(!ok) return;
-        try{ localStorage.clear(); }catch(_){}
-        try{
-          if(window.indexedDB){
-            const candidates = ["vitals_tracker_db","VitalsTrackerDB","vitals_tracker"];
-            for(const name of candidates){
-              try{ indexedDB.deleteDatabase(name); }catch(_){}
-            }
-          }
-        }catch(_){}
-        alert("Local data clear requested. Reloading.");
-        location.reload();
-      });
-
-      // Exit (known-good pattern)
-      document.getElementById("btnExit").addEventListener("click", () => {
-        try{
-          window.close();
-          setTimeout(() => {
-            alert("If the app did not close, use your device Back/Home button.");
-          }, 300);
-        }catch(_){
-          alert("Use your device Back/Home button to exit.");
-        }
-      });
-
-      // Carousel swipe gestures (minimal gate; chart protection here)
-      const panelsRoot = document.getElementById("panelsRoot");
-      const canvasWrap = document.getElementById("canvasWrap");
-
-      let swipe = { active:false, sx:0, sy:0, ok:false, mode:null };
-
-      function within(el, target){
-        if(!el || !target) return false;
-        return el === target || el.contains(target);
-      }
-
-      function isSwipeAllowedStart(target){
-        // Hard block: chart interaction region
-        if(active === "charts" && canvasWrap && within(canvasWrap, target)) return false;
-
-        // Allow swipe starts only from marked swipe zones/headers
-        const z = target.closest("[data-swipezone='1']");
-        return !!z;
-      }
-
-      panelsRoot.addEventListener("touchstart", (e) => {
-        if(e.touches.length !== 1) return;
-        const t = e.touches[0];
-        swipe.active = true;
-        swipe.sx = t.clientX;
-        swipe.sy = t.clientY;
-        swipe.ok = isSwipeAllowedStart(e.target);
-        swipe.mode = null;
-      }, {passive:true});
-
-      panelsRoot.addEventListener("touchmove", (e) => {
-        if(!swipe.active || !swipe.ok) return;
-        if(e.touches.length !== 1) return;
-        const t = e.touches[0];
-        const dx = t.clientX - swipe.sx;
-        const dy = t.clientY - swipe.sy;
-
-        if(!swipe.mode){
-          if(Math.abs(dx) > 18 && Math.abs(dx) > Math.abs(dy) * 1.2) swipe.mode = "h";
-          else if(Math.abs(dy) > 18 && Math.abs(dy) > Math.abs(dx) * 1.2) swipe.mode = "v";
-        }
-        if(swipe.mode === "h") e.preventDefault();
-      }, {passive:false});
-
-      panelsRoot.addEventListener("touchend", (e) => {
-        if(!swipe.active || !swipe.ok) { swipe.active=false; return; }
-        swipe.active = false;
-        if(swipe.mode !== "h") return;
-
-        const t = (e.changedTouches && e.changedTouches[0]) ? e.changedTouches[0] : null;
-        if(!t) return;
-        const dx = t.clientX - swipe.sx;
-        if(Math.abs(dx) < 40) return;
-
-        if(dx < 0) nextPanel(); else prevPanel();
-      }, {passive:true});
-
-      // Service worker
       if("serviceWorker" in navigator){
-        navigator.serviceWorker.register("./sw.js?v=2.023c").catch(()=>{});
+        navigator.serviceWorker.register("./sw.js?v=2.023e").catch(()=>{});
       }
-
-      // Initial panel
-      setActive("home");
     })();
   </script>
 </body>
@@ -698,8 +522,9 @@ Key IDs (contract)
 <!--
 Vitals Tracker — EOF Version/Detail Notes (REQUIRED)
 File: index.html
-App Version: v2.023c
+App Version: v2.023e
 Base: v2.021
-Touched in v2.023c: index.html only (load-order + version authority fix)
+Touched in v2.023e: index.html (REMOVED inline router/swipe; modules own behavior)
+Schema order: File 1 of 10
 Next planned file: js/version.js (File 2 of 10)
 -->
