--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
-<!-- Vitals Tracker v2.024 -->
+<!-- File: index.html -->
 <!--
 Vitals Tracker — MASTER (Index Authority)
 Copyright (c) 2026 Wendell K. Jiles. All rights reserved.
 
 App Version: v2.024
-Base: v2.021
+Base: v2.023e
 Date: 2026-01-18
 
-CHANGE LOG (index.html only)
-- Removes ALL inline swipe + inline panel router logic (modules own behavior).
-- Restores Home pull-to-refresh (bound to the Home card scroll surface).
-- Restores Add panel shell with working Home button + defensive fallbacks.
-- Keeps swipe gating via data-swipezone="1" and protects #canvasWrap for chart gestures.
-- Keeps IDs stable for modules.
+v2.024 — Change Log (THIS FILE ONLY)
+1) Aligns cache-busters + SW registration to v2.024.
+2) Restores proper panel structure INCLUDING Add panel (#panelAdd).
+3) Fixes Add panel Home button wiring (routes to Home reliably).
+4) Restores Home pull-to-refresh (Home panel only).
+5) Removes legacy inline swipe carousel handlers (swipe is owned by js/gestures.js + js/panels.js).
+6) Version display now reads from VTVersion only (no hard-coded versions here).
 
 Hard Rules (anti-drift)
 - Canonical version is owned by js/version.js only.
-- index.html may display version but must not define canonical values.
-- Chart logic lives only in js/chart.js.
-- Swipe logic lives only in js/gestures.js.
-- Panel routing lives only in js/panels.js.
+- Swipe logic lives ONLY in js/gestures.js.
+- Panel routing lives ONLY in js/panels.js (with fallback safety in this file only).
+- Chart logic lives ONLY in js/chart.js.
 -->
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -199,7 +200,6 @@ Hard Rules (anti-drift)
       background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
       overflow:auto;
       min-height:0;
-      -webkit-overflow-scrolling: touch;
     }
     .muted{color:var(--muted)}
     .small{font-size:13px}
@@ -292,7 +292,7 @@ Hard Rules (anti-drift)
       padding:6px;
       background: rgba(0,0,0,.18);
       overflow:hidden;
-      touch-action:none; /* chart module manages its own gestures */
+      touch-action:none;
     }
     canvas{
       display:block;
@@ -316,12 +316,23 @@ Hard Rules (anti-drift)
       font-weight:800;
       line-height:1.3;
     }
+
+    /* Add panel */
+    .addNotice{
+      border:1px solid var(--stroke);
+      border-radius:18px;
+      padding:14px;
+      background: rgba(0,0,0,.16);
+      color: var(--muted);
+      font-weight:800;
+      line-height:1.35;
+    }
   </style>
 </head>
 
 <body>
   <div class="app">
-    <div class="topbar" data-swipezone="1">
+    <div class="topbar">
       <div class="brand">
         <div class="logo" aria-hidden="true">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
@@ -338,17 +349,17 @@ Hard Rules (anti-drift)
     <div class="shell">
       <div class="panels" id="panelsRoot">
 
-        <!-- HOME -->
+        <!-- HOME (0) -->
         <section class="panel active" id="panelHome" aria-label="Home">
           <div class="pull" id="pullIndicator">Release to refresh</div>
 
-          <div class="card" id="homeCard">
+          <div class="card" id="homeCard" data-swipezone="1">
             <div class="homeActions">
               <button class="homeBig" id="btnGoAdd">Add Reading</button>
               <button class="homeBig secondary" id="btnGoCharts">Charts</button>
               <button class="homeBig secondary" id="btnGoLog">Log</button>
 
-              <div class="homeRow" data-swipezone="1">
+              <div class="homeRow">
                 <button class="btn secondary" id="btnInstall" disabled>Install</button>
                 <button class="btn secondary" id="btnClearData">Clear Data</button>
                 <button class="btn danger" id="btnExit">Exit</button>
@@ -374,7 +385,7 @@ Hard Rules (anti-drift)
           </div>
         </section>
 
-        <!-- ADD -->
+        <!-- ADD (overlay; excluded from swipe) -->
         <section class="panel" id="panelAdd" aria-label="Add Reading">
           <div class="panelHeader" id="addHeader" data-swipezone="1">
             <div class="name">Add Reading</div>
@@ -391,14 +402,15 @@ Hard Rules (anti-drift)
             </div>
           </div>
 
-          <div class="card" id="addCard">
-            <div class="muted">
+          <div class="card">
+            <div class="addNotice">
               Add panel UI + save flow will be restored by the Add modules (not in index.html).
+              This panel exists now only to ensure navigation correctness and Home button reliability.
             </div>
           </div>
         </section>
 
-        <!-- CHARTS -->
+        <!-- CHARTS (1) -->
         <section class="panel" id="panelCharts" aria-label="Charts">
           <div class="panelHeader" id="chartsHeader" data-swipezone="1">
             <div class="name">Charts</div>
@@ -428,7 +440,7 @@ Hard Rules (anti-drift)
           </div>
         </section>
 
-        <!-- LOG -->
+        <!-- LOG (2) -->
         <section class="panel" id="panelLog" aria-label="Log">
           <div class="panelHeader" id="logHeader" data-swipezone="1">
             <div class="name">Log</div>
@@ -448,14 +460,14 @@ Hard Rules (anti-drift)
           <div class="card" id="logCard">
             <div class="muted" id="logTopNote">Loading…</div>
             <div class="muted small" style="margin-top:10px;">
-              Log rendering is owned by modules (log.js/ui.js). It will populate when those modules are restored.
+              Log rendering is owned by modules (log.js/ui.js). Restore after Add/save is restored.
             </div>
           </div>
         </section>
 
-        <!-- SETTINGS -->
+        <!-- SETTINGS (3) -->
         <section class="panel" id="panelSettings" aria-label="Settings">
-          <div class="panelHeader" id="settingsHeader" data-swipezone="1">
+          <div class="panelHeader" data-swipezone="1">
             <div class="name">Settings</div>
             <div class="nav">
               <button class="btn secondary" id="btnBackFromSettings">Back</button>
@@ -463,10 +475,10 @@ Hard Rules (anti-drift)
           </div>
 
           <div class="card">
-            <div class="muted">v2.02x series: stabilize version authority + chart + swipe + input before new features.</div>
+            <div class="muted">v2.024: stabilize navigation + pull-to-refresh + swipe + formatted chart before new features.</div>
             <div class="settingsList">
-              <div class="settingsItem">Reporting + Export will be restored after input is restored.</div>
-              <div class="settingsItem">Distress (0–5) and Medication markers are roadmap items (not enabled here).</div>
+              <div class="settingsItem">Bands opacity target: +35% (implemented in chart renderer, not here).</div>
+              <div class="settingsItem">Chart window: default last 7 days; zoom 1–14 days; pan clamped to dataset.</div>
               <div class="settingsItem">Version discipline: js/version.js is canonical; UI displays from it only.</div>
             </div>
           </div>
@@ -476,9 +488,10 @@ Hard Rules (anti-drift)
     </div>
   </div>
 
-  <!-- Script cache-busting pinned to v2.024 -->
+  <!-- Scripts (cache-busting pinned to v2.024) -->
   <script src="./js/version.js?v=2.024"></script>
   <script src="./js/app.js?v=2.024"></script>
+
   <script src="./js/storage.js?v=2.024"></script>
   <script src="./js/store.js?v=2.024"></script>
   <script src="./js/state.js?v=2.024"></script>
@@ -491,149 +504,178 @@ Hard Rules (anti-drift)
     (function(){
       "use strict";
 
-      function safe(fn){ try{ fn(); }catch(_){ } }
+      function $(id){ return document.getElementById(id); }
 
-      // Display version (read-only; canonical is version.js)
-      safe(function(){
-        var v = (window.VTVersion && window.VTVersion.getVersionString) ? window.VTVersion.getVersionString() : "v?.???";
-        var boot = document.getElementById("bootText");
-        var hv = document.getElementById("homeVersion");
-        if(boot) boot.textContent = "BOOT OK " + v;
-        if(hv) hv.textContent = v;
-      });
+      // ---- Version display (VTVersion is canonical) ----
+      function applyVersionText(){
+        try{
+          const v = window.VTVersion?.getVersionString?.() || "v?.???";
+          const boot = $("bootText");
+          const hv = $("homeVersion");
+          if(boot) boot.textContent = `BOOT OK ${v}`;
+          if(hv) hv.textContent = v;
+        }catch(_){}
+      }
 
-      // Defensive button fallbacks (modules should own; these prevent dead UI)
-      function go(panel){
-        if(window.VTPanels && typeof window.VTPanels.setActive === "function"){
-          window.VTPanels.setActive(panel);
-          return;
+      // ---- Navigation (prefer VTPanels; fallback if missing) ----
+      function showFallback(which){
+        const ids = ["panelHome","panelAdd","panelCharts","panelLog","panelSettings"];
+        const map = {
+          home:"panelHome",
+          add:"panelAdd",
+          charts:"panelCharts",
+          log:"panelLog",
+          settings:"panelSettings"
+        };
+        for(const id of ids){
+          const el = $(id);
+          if(el) el.classList.toggle("active", map[which] === id);
         }
-        // Hard fallback: toggle .active manually if modules missing
-        var ids = ["panelHome","panelAdd","panelCharts","panelLog","panelSettings"];
-        for(var i=0;i<ids.length;i++){
-          var el = document.getElementById(ids[i]);
-          if(!el) continue;
-          el.classList.toggle("active", ids[i] === ("panel"+panel.charAt(0).toUpperCase()+panel.slice(1)));
+        if(which === "charts"){
+          try{ window.VTChart?.onShow?.(); }catch(_){}
         }
       }
 
-      var btnGoAdd = document.getElementById("btnGoAdd");
-      var btnGoCharts = document.getElementById("btnGoCharts");
-      var btnGoLog = document.getElementById("btnGoLog");
+      function go(panel){
+        if(window.VTPanels?.setActive) window.VTPanels.setActive(panel);
+        else showFallback(panel);
+      }
 
-      if(btnGoAdd) btnGoAdd.addEventListener("click", function(){ go("add"); });
-      if(btnGoCharts) btnGoCharts.addEventListener("click", function(){ go("charts"); safe(function(){ window.VTChart && window.VTChart.onShow && window.VTChart.onShow(); }); });
-      if(btnGoLog) btnGoLog.addEventListener("click", function(){ go("log"); });
+      function bindClick(id, fn){
+        const el = $(id);
+        if(!el) return;
+        el.addEventListener("click", function(e){
+          try{ fn(e); }catch(_){}
+        });
+      }
 
-      var btnHomeFromAdd = document.getElementById("btnHomeFromAdd");
-      if(btnHomeFromAdd) btnHomeFromAdd.addEventListener("click", function(){ go("home"); });
+      // Home buttons
+      bindClick("btnGoAdd", () => go("add"));
+      bindClick("btnGoCharts", () => go("charts"));
+      bindClick("btnGoLog", () => go("log"));
 
-      // Pull-to-refresh: bind to Home card scroll surface (this is the piece that commonly breaks)
-      (function(){
-        var homeCard = document.getElementById("homeCard");
-        var pullIndicator = document.getElementById("pullIndicator");
-        if(!homeCard || !pullIndicator) return;
+      // Home from other panels
+      bindClick("btnHomeFromAdd", () => go("home"));
+      bindClick("btnHomeFromCharts", () => go("home"));
+      bindClick("btnHomeFromLog", () => go("home"));
 
-        var pullStartY = null;
-        var pullArmed = false;
+      // Settings open
+      const openSettings = () => go("settings");
+      bindClick("btnSettings", openSettings);
+      bindClick("btnSettingsFromAdd", openSettings);
+      bindClick("btnSettingsFromCharts", openSettings);
+      bindClick("btnSettingsFromLog", openSettings);
 
-        homeCard.addEventListener("touchstart", function(e){
-          if(homeCard.scrollTop !== 0) return;
-          if(!e.touches || e.touches.length !== 1) return;
+      // Settings back (prefer panels.js behavior if present)
+      bindClick("btnBackFromSettings", () => {
+        if(window.VTPanels?.closeSettings) window.VTPanels.closeSettings();
+        else go("home");
+      });
+
+      // ---- Pull-to-refresh (Home only) ----
+      const homePanel = $("panelHome");
+      const pullIndicator = $("pullIndicator");
+      let pullStartY = null;
+      let pullArmed = false;
+
+      if(homePanel && pullIndicator){
+        homePanel.addEventListener("touchstart", (e) => {
+          if(e.touches.length !== 1) return;
+          // Only arm when at top (no scrolling within card)
+          const card = $("homeCard");
+          if(card && card.scrollTop > 0) return;
           pullStartY = e.touches[0].clientY;
           pullArmed = false;
         }, {passive:true});
 
-        homeCard.addEventListener("touchmove", function(e){
+        homePanel.addEventListener("touchmove", (e) => {
           if(pullStartY == null) return;
-          if(!e.touches || e.touches.length !== 1) return;
-          var dy = e.touches[0].clientY - pullStartY;
+          if(e.touches.length !== 1) return;
+          const dy = e.touches[0].clientY - pullStartY;
           if(dy <= 0) return;
-
-          // Visual feedback
-          var h = Math.min(52, Math.floor(dy/2));
+          const h = Math.min(52, Math.floor(dy/2));
           pullIndicator.style.height = h + "px";
           pullArmed = (h >= 36);
         }, {passive:true});
 
-        homeCard.addEventListener("touchend", function(){
+        homePanel.addEventListener("touchend", () => {
           if(pullStartY == null) return;
-          var armed = pullArmed;
+          const armed = pullArmed;
           pullStartY = null;
           pullArmed = false;
           pullIndicator.style.height = "0px";
           if(armed) location.reload();
         }, {passive:true});
-      })();
+      }
 
-      // Install handling (kept here; safe + isolated)
-      (function(){
-        var btnInstall = document.getElementById("btnInstall");
-        if(!btnInstall) return;
+      // ---- Install handling ----
+      const btnInstall = $("btnInstall");
+      let deferredPrompt = null;
 
-        var deferredPrompt = null;
-        window.addEventListener("beforeinstallprompt", function(e){
+      if(btnInstall){
+        window.addEventListener("beforeinstallprompt", (e) => {
           e.preventDefault();
           deferredPrompt = e;
           btnInstall.disabled = false;
         });
 
-        btnInstall.addEventListener("click", async function(){
+        btnInstall.addEventListener("click", async () => {
           try{
             if(!deferredPrompt) return;
             deferredPrompt.prompt();
             await deferredPrompt.userChoice;
-          } catch(_){
-          } finally {
+          }catch(_){
+          }finally{
             deferredPrompt = null;
             btnInstall.disabled = true;
           }
         });
-      })();
+      }
 
-      // Clear data (best-effort)
-      (function(){
-        var btn = document.getElementById("btnClearData");
-        if(!btn) return;
-        btn.addEventListener("click", function(){
-          var ok = confirm("Clear all local data on this device?");
-          if(!ok) return;
-          safe(function(){ localStorage.clear(); });
-          safe(function(){
-            if(window.indexedDB){
-              var candidates = ["vitals_tracker_db","VitalsTrackerDB","vitals_tracker","VT_DB"];
-              for(var i=0;i<candidates.length;i++){
-                safe(function(){ indexedDB.deleteDatabase(candidates[i]); });
-              }
+      // ---- Clear data (best-effort) ----
+      bindClick("btnClearData", () => {
+        const ok = confirm("Clear all local data on this device?");
+        if(!ok) return;
+        try{ localStorage.clear(); }catch(_){}
+        try{
+          if(window.indexedDB){
+            const candidates = ["vitals_tracker_db","VitalsTrackerDB","vitals_tracker","VT_DB"];
+            for(const name of candidates){
+              try{ indexedDB.deleteDatabase(name); }catch(_){}
             }
-          });
-          alert("Local data clear requested. Reloading.");
-          location.reload();
-        });
-      })();
-
-      // Exit (keep your known-good pattern)
-      (function(){
-        var btn = document.getElementById("btnExit");
-        if(!btn) return;
-        btn.addEventListener("click", function(){
-          try{
-            window.close();
-            setTimeout(function(){
-              alert("If the app did not close, use your device Back/Home button.");
-            }, 300);
-          } catch(_){
-            alert("Use your device Back/Home button to exit.");
           }
-        });
-      })();
+        }catch(_){}
+        alert("Local data clear requested. Reloading.");
+        location.reload();
+      });
 
-      // Service worker
-      safe(function(){
-        if("serviceWorker" in navigator){
-          navigator.serviceWorker.register("./sw.js?v=2.024").catch(function(){});
+      // ---- Exit (known-good pattern) ----
+      bindClick("btnExit", () => {
+        try{
+          window.close();
+          setTimeout(() => {
+            alert("If the app did not close, use your device Back/Home button.");
+          }, 300);
+        }catch(_){
+          alert("Use your device Back/Home button to exit.");
         }
       });
+
+      // ---- Service Worker ----
+      try{
+        if("serviceWorker" in navigator){
+          navigator.serviceWorker.register("./sw.js?v=2.024").catch(()=>{});
+        }
+      }catch(_){}
+
+      // ---- Boot ----
+      applyVersionText();
+      // Ensure a sane initial panel if panels.js fails to init for any reason
+      go("home");
+
+      // Keep version text correct even if modules load later
+      setTimeout(applyVersionText, 60);
+      setTimeout(applyVersionText, 250);
 
     })();
   </script>
@@ -644,6 +686,7 @@ Hard Rules (anti-drift)
 Vitals Tracker — EOF Version/Detail Notes (REQUIRED)
 File: index.html
 App Version: v2.024
-Base: v2.021
+Base: v2.023e
 Touched in v2.024: index.html
+Next file to deliver: js/chart.js (File 3 of 6)
 -->
