--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Vitals Tracker — BOF Version/Detail Notes (REQUIRED)
 File: index.html
 App Version Authority: js/version.js (do not hardcode versions here)
 Base: v2.025f
-Pass: Render Recovery + Swipe Feel
+Pass: Swipe + Render Recovery (P0-R1)
 Pass order: File 2 of 9 (P0)
 Prev file: js/version.js (File 1 of 9)
 Next file: css/app.css (File 3 of 9)
@@ -23,7 +23,7 @@ Next file: css/app.css (File 3 of 9)
   <link rel="apple-touch-icon" href="icons/icon-192.png" />
 
   <!-- App CSS (single source) -->
-  <link rel="stylesheet" href="css/app.css?v=20260119" />
+  <link rel="stylesheet" href="css/app.css?v=20260119a" />
 
   <!-- Minimal critical fallback (only for catastrophic CSS load failure) -->
   <style>
@@ -209,19 +209,19 @@ Next file: css/app.css (File 3 of 9)
   </div>
 
   <!-- Scripts (order matters) -->
-  <script src="js/version.js?v=20260119"></script>
-  <script src="js/utils.js?v=20260119"></script>
-  <script src="js/storage.js?v=20260119"></script>
-  <script src="js/store.js?v=20260119"></script>
-  <script src="js/state.js?v=20260119"></script>
-  <script src="js/ui.js?v=20260119"></script>
-  <script src="js/panels.js?v=20260119"></script>
-  <script src="js/gestures.js?v=20260119"></script>
-  <script src="js/chart.js?v=20260119"></script>
-  <script src="js/log.js?v=20260119"></script>
-  <script src="js/add.js?v=20260119"></script>
-  <script src="js/pwa.js?v=20260119"></script>
-  <script src="js/app.js?v=20260119"></script>
+  <script src="js/version.js?v=20260119a"></script>
+  <script src="js/utils.js?v=20260119a"></script>
+  <script src="js/storage.js?v=20260119a"></script>
+  <script src="js/store.js?v=20260119a"></script>
+  <script src="js/state.js?v=20260119a"></script>
+  <script src="js/ui.js?v=20260119a"></script>
+  <script src="js/panels.js?v=20260119a"></script>
+  <script src="js/gestures.js?v=20260119a"></script>
+  <script src="js/chart.js?v=20260119a"></script>
+  <script src="js/log.js?v=20260119a"></script>
+  <script src="js/add.js?v=20260119a"></script>
+  <script src="js/pwa.js?v=20260119a"></script>
+  <script src="js/app.js?v=20260119a"></script>
 
   <script>
     (function(){
@@ -243,7 +243,8 @@ Next file: css/app.css (File 3 of 9)
 Vitals Tracker — EOF Version/Detail Notes (REQUIRED)
 File: index.html
 App Version Authority: js/version.js
-Pass: Render Recovery + Swipe Feel
+Base: v2.025f
+Pass: Swipe + Render Recovery (P0-R1)
 Pass order: File 2 of 9 (P0)
 Prev file: js/version.js (File 1 of 9)
 Next file: css/app.css (File 3 of 9)
